test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_28.k
# Arguments cannot be used in the schema modification expression
schema Person:
    name: str

personOrigin = Person { name = "Alice" }
personNew = personOrigin("invalid arguments") { name = "Bob" }
